--- a/src/content/docs/de-wiki/cdc.mdx
+++ b/src/content/docs/de-wiki/cdc.mdx
@@ -1,5 +1,5 @@
 ---
-title: '실시간 데이터 동기화의 핵심, 변경 데이터 캡처(CDC) 깊이 알기'
+title: '변경 데이터 캡처(CDC) 깊이 알기'
 description: '변경 데이터 캡처(CDC)의 핵심 개념, 작동 방식, 활용 사례, 장단점, 운영 고려사항을 알아봅니다.'
 head:
   - tag: meta
