--- a/src/content/docs/de-wiki/dqm.mdx
+++ b/src/content/docs/de-wiki/dqm.mdx
@@ -15,117 +15,104 @@ import ChoiceCardGrid from '../../../components/ChoiceCardGrid.astro';
 <ReadingTimeInfo minutesRead="6 min read" date="2025-05-26"/>
 
 :::tip[핵심 요약]
-이 글에서는 데이터 품질의 핵심인 **데이터 무결성**을 시작으로, 효과적인 데이터 품질 관리를 위한 **5단계 프로세스**와 **주요 활동(데이터 표준화, 프로파일링 및 정제, 데이터 거버넌스, 지속적인 테스트 및 모니터링)** 을 상세히 설명합니다.
+이 글에서는 데이터 품질의 핵심인 **데이터 무결성**과 데이터 품질 관리를 위한 **5단계 프로세스**, **주요 활동(데이터 표준화, 프로파일링 및 정제, 데이터 거버넌스, 지속적인 테스트 및 모니터링)** 에 대해 설명합니다.
 
 데이터 품질 관리는 일회성 이벤트가 아닌, 데이터 생명주기 전반에 걸친 **지속적인 문화이자 프로세스**임을 강조하며, 이를 통해 비즈니스 성공의 기반을 마련하는 방법을 제시합니다.
 :::
 
 ![데이터 품질 관리](/images/dqm.png)
 
-데이터는 오늘날 비즈니스 의사결정의 핵심입니다. 하지만 단순히 데이터를 모으는 것을 넘어, **데이터 품질**을 확보하는 것이 중요합니다. 
+오늘날 비즈니스 의사결정의 핵심이 되는 것이 바로 **데이터** 입니다. 하지만 단순히 데이터를 모으는 것보다 중요한 것이 **데이터 품질**을 확보하는 것이라는 점 알고 계신가요?
 
-품질 낮은 데이터는 잘못된 비즈니스 결정으로 이어질 수 있습니다. [가트너(Gartner) 분석](https://www.ibm.com/kr-ko/topics/data-quality)에 따르면, 기업들은 데이터 품질 문제로 연평균 1,300만 달러의 손실을 경험합니다. 
+바로 품질 낮은 데이터는 잘못된 비즈니스 결정으로 이어질 수 있기 때문인데요, [가트너(Gartner) 분석](https://www.ibm.com/kr-ko/topics/data-quality)에 따르면, 기업들은 데이터 품질 문제로 연평균 1,300만 달러의 손실을 경험한다고 합니다. 
 
-특히 인공지능(AI) 시대에는 데이터 품질의 중요성이 더욱 커집니다. 부정확한 데이터는 AI 모델의 성능을 저해하고 신뢰도를 떨어뜨리기 때문입니다.
+특히 인공지능(AI)이 중요한 시대가 되며 데이터 품질의 중요성이 더욱 커지고 있습니다. 부정확한 데이터는 AI 모델의 성능을 저해하고 신뢰도를 떨어뜨리기 때문이죠.
 
-이 글에서는 데이터 품질 관리의 중요성과 핵심 개념, 그리고 효과적인 관리 프로세스와 핵심 활동들을 알아봅니다.
+이 글에서는 데이터 품질 관리의 중요성과 핵심 개념, 그리고 효과적인 관리 프로세스와 핵심 활동들에 대해 알아보겠습니다.
 
 ## 데이터 품질이 중요한 이유
 
-데이터 품질을 높이면 다음과 같은 이점을 얻을 수 있습니다.
+데이터 품질이 중요한 가장 큰 이유는 **데이터 품질이 높을수록 데이터 활용 가치가 높아지기 때문**입니다.
 
-*   **정확한 의사결정 지원**: 신뢰할 수 있는 데이터는 운영 전략, 재무 예측, 마케팅 활동 등 비즈니스 전반의 의사결정 정확도를 높입니다.
-*   **비용 절감 및 운영 효율성 증대**: 데이터 오류 수정, 불일치 해결, 중복 식별에 드는 시간과 자원을 줄일 수 있습니다. 좋은 데이터 품질은 직원들이 데이터 관련 문제를 처리하는 대신 더 높은 가치의 전략적 업무에 집중함으로써 비용을 절감합니다.
-*   **AI 모델 신뢰도 및 성능 향상**: 고품질 데이터는 AI 모델의 예측 정확성과 안정성을 높여 AI 기술 활용 효과를 극대화합니다.
-*   **고객 신뢰 및 만족도 향상**: 정확한 데이터를 기반으로 고객에게 더 나은 서비스를 제공하고, 이는 고객 신뢰와 만족도 증진으로 이어집니다.
-*   **데이터 거버넌스 강화 및 규정 준수**: 데이터 품질 관리는 데이터 거버넌스 체계를 강화하고, 각종 규제 요건을 충족하는 데 필수적입니다.
-*   **경쟁 우위 확보**: 데이터 기반의 통찰력은 시장 변화에 빠르게 대응하고 새로운 기회를 포착하여 경쟁 우위를 확보하는 데 도움을 줍니다.
+우리는 흔히 `DB에 비정상적으로 Null/빈값이 많다`거나, `중복 데이터가 쌓인다`거나, `날짜 & 단위 등의 포맷이 다르다`거나 할 때 데이터 품질이 낮다고 이야기 하는데요,
+
+이러한 경우 나중에 데이터를 활용할 때 통계 왜곡은 물론, 시각화에 오류가 발생하고, 마케팅의 효율이 떨어지는 등의 문제가 발생할 수 있습니다.
+
+그리고 이러한 문제는 **데이터 품질이 낮을수록 더 빈번하게 발생하게 됩니다.**
 
 ## 데이터 품질의 핵심: 데이터 무결성
 
-데이터 품질 관리의 핵심은 **데이터 무결성(Data Integrity)** 을 지키는 것입니다. 데이터 무결성이란 데이터가 생성될 때부터 폐기될 때까지 그 **정확성, 완전성, 일관성**을 유지하는 것을 의미합니다. 데이터가 믿을 수 있는 상태로 유지되어야 진정한 가치를 발휘할 수 있습니다.
+데이터 품질 관리의 핵심은 **데이터 무결성(Data Integrity)** 을 지키는 것입니다. 
 
-[정보시스템감리(CISP) 가이드](https://www.cisp.or.kr/wp-content/uploads/2020/03/%EB%8D%B0%EC%9D%B4%ED%84%B0%ED%92%88%EC%A7%88%EA%B4%80%EB%A6%AC%EC%A7%80%EC%B9%A8-Ver-2.1.pdf)에서는 데이터 품질 관리를 다음 세 가지 관점에서 접근해야 한다고 설명합니다.
+데이터 무결성이란 데이터가 생성될 때부터 폐기될 때까지 그 `정확성`, `완전성`, `일관성`을 유지하는 것을 의미하며, 이는 신뢰할 수 있는 데이터를 확보하는데 필요한 핵심 요소입니다.
 
-1.  **데이터 값 자체**: 데이터 필드에 입력된 실제 값의 정확성, 유효성(정해진 형식이나 범위 준수 여부), 완전성(필수 값 누락 여부) 등을 의미합니다.
-2.  **데이터 구조**: 데이터를 담고 있는 테이블, 컬럼 등의 스키마 구조가 잘 설계되었는지, 데이터 모델이 비즈니스 요구사항을 충실히 반영하는지를 평가합니다. 사용자 뷰, 모델, 데이터베이스 파일 형태 등이 해당됩니다.
-3.  **데이터 관리 프로세스**: 데이터를 수집, 저장, 처리, 활용하는 전 과정에서 데이터 및 데이터 구조의 품질을 안정적으로 유지하고 개선하기 위한 활동, 정책, 절차를 의미합니다.
+[정보시스템감리(CISP) 가이드](https://www.cisp.or.kr/wp-content/uploads/2020/03/%EB%8D%B0%EC%9D%B4%ED%84%B0%ED%92%88%EC%A7%88%EA%B4%80%EB%A6%AC%EC%A7%80%EC%B9%A8-Ver-2.1.pdf) 에서는 데이터 품질 관리를 다음의 세 가지 관점에서 접근해야 한다고 합니다.
 
-이러한 관점들을 종합적으로 고려하여 데이터 품질을 관리해야 합니다. 그럼 데이터 품질 관리를 어떻게 시작하면 좋을까요? 
+1. **데이터 값 자체**: 입력된 값의 정확성, 유효성(형식·범위 준수), 완전성(필수값 존재 여부) 등
 
-## 데이터 품질 관리, 5단계 프로세스로 시작하기
+2. **데이터 구조**: 테이블·컬럼 등 스키마 설계의 적절성과 비즈니스 반영 여부
 
-데이터 품질 관리는 다음의 기본적인 5단계 프로세스를 기반으로 체계적으로 수행할 수 있습니다.
+3. **데이터 관리 프로세스**: 수집부터 활용까지의 절차·정책이 품질 유지를 뒷받침하는지
 
-1.  **목표 설정 및 계획 수립 (Plan)**
-    어떤 수준의 데이터 품질을 달성할 것인지 명확한 목표를 설정하고, 이를 달성하기 위한 구체적인 실행 계획을 수립합니다. 이 단계에서부터 데이터 표준화 등을 고려해야 합니다.
+이처럼 데이터 품질은 단순히 `데이터 값`만 보는 것이 아니라 데이터를 다루는 `구조`와 `프로세스` 전반을 함께 고려해야 합니다.
 
-2.  **지표 정의 및 측정 (Measure)**
-    데이터 품질을 객관적으로 평가할 수 있는 핵심 지표(KPIs)를 정의합니다. 예를 들어, 데이터의 완전성(Completeness), 유효성(Validity), 유일성(Uniqueness), 정합성(Consistency), 정확성(Accuracy), 적시성(Timeliness) 등을 측정할 수 있습니다.
+이러한 데이터 품질 관리는 아래의 **데이터 품질 관리 5단계 프로세스**를 통하여 체계적으로 관리할 수 있습니다.
 
-3.  **문제 발견 및 원인 분석 (Analyze)**
-    측정 결과를 바탕으로 데이터 품질 문제를 식별하고, 단순한 현상을 넘어 문제의 근본 원인을 심층적으로 분석합니다.
+## 데이터 품질 관리 5단계 프로세스
 
-4.  **개선 조치 실행 (Improve)**
-    분석된 원인을 바탕으로 데이터를 정제(Cleansing)하거나 표준화하는 등 실질적인 개선 활동을 수행합니다. 오류 데이터를 수정하거나, 누락된 정보를 채우고, 중복 데이터를 제거하는 작업 등이 포함됩니다.
+* **목표 설정 및 계획 수립 (Plan)**<br/>
+어떤 수준의 데이터 품질을 달성할 것인지 명확히 정의하고, 이를 위한 실행 계획과 표준을 수립합니다.
 
-5.  **성과 모니터링 및 지속 관리 (Monitor)**
-    개선된 데이터 품질 수준이 지속적으로 유지되는지 정기적으로 모니터링하고, 성과를 추적합니다. 필요시 추가적인 조치를 취하거나 프로세스를 개선하여 품질 관리 활동을 지속합니다.
+* **지표 정의 및 측정 (Measure)**<br/>
+데이터 품질을 객관적으로 판단할 수 있도록 완전성, 유효성, 유일성, 정확성 등 핵심 지표를 정의하고 측정합니다.
+
+* **문제 발견 및 원인 분석 (Analyze)**<br/>
+측정 결과를 기반으로 품질 저하 요인을 파악하고, 그 근본 원인을 분석합니다.
+
+* **개선 조치 실행 (Improve)**<br/>
+오류 수정, 중복 제거, 표준화 등의 활동을 통해 실질적인 데이터 품질 개선을 수행합니다.
+
+* **성과 모니터링 및 지속 관리 (Monitor)**<br/>
+개선된 상태가 유지되도록 정기적으로 품질 수준을 점검하고, 필요시 추가 개선을 추진합니다.
 
 ## 성공적인 데이터 품질 관리를 위한 핵심 활동
 
-위 5단계 프로세스를 효과적으로 실행하고 데이터 품질을 지속적으로 높이기 위한 주요 활동은 다음과 같습니다.
+위 5단계 프로세스를 성공적으로 수행하기 위해서는 각각의 단계에서 꼭 수행해주어야 하는 몇 가지 핵심 활동들이 존재합니다.
 
 ### 1. 데이터 표준화
 
-데이터 표준화는 데이터 품질 관리의 계획 단계부터 고려해야 하며, 개선 단계에서 실제로 실행되는 중요한 활동입니다. 조직 전체에서 사용하는 데이터 관련 **용어, 도메인(값의 범위나 유형), 데이터 타입, 코드 등을 통일**하는 과정입니다.
+데이터 표준화는 데이터 품질 관리의 `계획 단계`부터 고려해야 하며, `개선 단계`에서 실제로 실행되는 중요한 활동입니다. 
 
-*   **구체적 활동**: 표준 단어 사전, 도메인 사전, 표준 용어집, 표준 코드 등을 정의하고 관리합니다.
-*   **기대 효과**: 데이터의 일관성을 확보하고, 데이터 해석의 모호성을 제거하여 데이터 품질의 기초를 마련합니다. 데이터 불일치와 오류를 방지하고 데이터 이해도를 높입니다.
+데이터 표준화란 조직 전체에서 사용하는 데이터 관련 **용어, 도메인(값의 범위나 유형), 데이터 타입, 코드 등을 통일**하는 과정입니다.
+
+예를 들어 표준 단어 사전, 도메인 사전 등을 만들어 조직 전체에서 사용하는 용어가 혼용되거나 모호해지는 것을 방지하여 데이터 품질의 기초를 마련할 수 있습니다.
 
 ### 2. 데이터 프로파일링 및 정제
 
-데이터 프로파일링과 정제는 주로 측정 및 개선 단계와 관련됩니다.
+데이터 프로파일링과 정제는 주로 `측정 및 개선 단계`와 관련됩니다. 
 
-*   **데이터 프로파일링**: 데이터의 현재 상태를 정확히 진단하기 위해 데이터 값의 분포, 패턴, 규칙 위반 사항, 데이터 간의 관계 등을 분석하는 과정입니다. 다양한 데이터 프로파일링 도구를 활용할 수 있습니다.
-*   **데이터 정제 (클렌징)**: 프로파일링 결과를 바탕으로 식별된 오류 데이터, 불일치 데이터, 중복 데이터 등을 수정하거나 제거하는 작업입니다. ETL(Extract, Transform, Load) 또는 ELT(Extract, Load, Transform) 과정에서 정의된 규칙에 따라 수행될 수 있습니다.
+데이터 프로파일링은 데이터의 현재 상태를 정확히 진단하기 위해 `데이터 값의 분포`, `패턴`, `규칙 위반 사항`, `데이터 간의 관계` 등을 분석하는 과정입니다.
 
-데이터 품질의 [7C 프레임워크(Collect, Characterize, Cleanse, Contextualize, Categorize, Correlate, Catalog)](https://www.ida.org/research-and-publications/publications/all/t/th/the-seven-cs-of-data-curation-for-the-two-cscommand-and-control#:~:text=The%20process%20can%20be%20described,(5)%20Categorize%E2%80%94Fit%20within)와 같은 접근법은 데이터 준비 파이프라인을 이해하고 데이터 품질을 확보하는 데 도움을 줄 수 있습니다.
+이렇게 분석한 결과를 바탕으로 식별된 `오류 데이터`, `불일치 데이터`, `중복 데이터` 등을 수정하거나 제거하는 방식으로 진행되는데 이 과정을 **데이터 정제(클렌징)** 이라고 합니다.
 
 ### 3. 데이터 거버넌스 수립
 
-데이터 거버넌스는 특정 단계에 국한되지 않고 데이터 품질 관리 전반에 걸쳐 필요한 기반 요소입니다. 단순히 기술적인 활동을 넘어, 조직 차원의 정책과 책임, 프로세스를 정의하고 실행하는 체계입니다.
+데이터 거버넌스 수립은 특정 단계에 국한되지 않고 데이터 품질 관리 전반에 걸쳐 필요한 활동입니다.
 
-*   **주요 내용**
-    *   데이터 표준 정의 및 관리
-    *   데이터 소유자(Data Owner) 및 데이터 관리자(Data Steward) 지정 등 역할과 책임 명확화
-    *   데이터 품질 관리 정책 및 절차 수립 및 시행
-    *   데이터 품질을 중시하는 조직 문화 조성
+데이터 거버넌스는 쉽게 말해 **조직 내 데이터를 잘 관리하고 잘 쓰기 위한 룰**이라고 이해하면 되는데요, 즉, 누가 `어떤 데이터를`, `언제`, `어떻게` 다룰 수 있는지를 정하고 이를 지속적으로 관리하기 위한 체계를 의미합니다.
 
-데이터 거버넌스는 데이터 품질을 지속적으로 유지하고 개선하기 위한 조직적 토대를 마련합니다.
+데이터 거버넌스가 잘 갖추어져 있는 조직은 데이터를 단순한 정보가 아닌 비즈니스 가치를 창출하는 중요한 자산으로 인식하는 문화가 갖추어져 있다고 볼 수 있습니다.
 
-### 4. 지속적인 테스트 및 모니터링
+## 데이터 품질 관리 문화를 정착시키기
 
-데이터 품질 관리는 일회성으로 끝나지 않습니다.
+계속해서 언급하지만 가장 중요한 점은 데이터 품질 관리가 한 번의 프로젝트나 이벤트로 끝나는 작업이 아니라는 것입니다. 
 
-*   **품질 테스트**: 데이터가 시스템에 입력되거나, 시스템 간에 이동하거나, 변환될 때, 그리고 사용자에게 제공되기 전에 사전에 정의된 품질 규칙에 기반하여 테스트하고 데이터의 정합성을 검증해야 합니다.
-*   **상시 모니터링**: 데이터 품질 수준을 지속적으로 추적하고 관리하여 문제가 발생했을 때 빠르게 대응할 수 있도록 합니다. 품질 지표를 시각화하여 대시보드로 관리하고, 임계치 기반의 알림 시스템을 구축할 수 있습니다.
+데이터 품질 관리는 데이터의 생성부터 저장, 활용, 폐기에 이르는 **전체 생명주기(Lifecycle)에 걸쳐 지속적으로 수행되어야 하는 문화이자 프로세스**입니다.
 
-## 데이터 품질 관리, 일회성이 아닌 문화로 정착해야 합니다
-
-가장 중요한 점은 데이터 품질 관리가 한 번의 프로젝트나 이벤트로 끝나는 작업이 아니라는 것입니다. 데이터의 생성부터 저장, 활용, 폐기에 이르는 **전체 생명주기(Lifecycle)에 걸쳐 지속적으로 수행되어야 하는 문화이자 프로세스**입니다.
-
-이를 위해서는 다음이 필요합니다.
-
-*   **전사적 관점의 체계 수립**: 부서 단위가 아닌 기업 전체의 관점에서 데이터 품질 관리 체계를 수립하고 운영해야 합니다.
-*   **전담 조직 및 역할 부여**: 데이터 품질 관리를 위한 전담 조직을 운영하거나, 관련 역할을 명확히 부여하는 것이 효과적입니다.
-*   **전문 인력 확보**: 경험과 지식이 풍부한 데이터 아키텍트, 데이터 엔지니어, 데이터 분석가 등의 전문가 확보가 중요합니다.
-*   **교육 및 변화 관리**: 정보시스템 설계자 및 개발자를 포함한 모든 구성원을 대상으로 데이터 품질의 중요성에 대한 교육을 실시하고, 변화 관리를 통해 새로운 프로세스와 문화를 정착시켜야 합니다.
+이러한 문화를 정착시키기 위해 `전사 KPI에 데이터 품질 관리 지표를 포함시킨다든지`, `데이터 품질 전문가를 별도로 둔다든지`, `정기적인 데이터 품질 교육을 실시하는 등의 노력`이 필요합니다.
 
 ## 결론
 
-높은 품질의 데이터는 더 이상 선택이 아닌, 비즈니스 성공을 결정짓는 핵심 자산입니다. 데이터 품질 관리를 통해 정확한 의사결정을 내리고, 운영 효율성을 높이며, AI와 같은 신기술의 잠재력을 최대한 활용할 수 있습니다.
+데이터 품질 관리를 철저히하여 높은 품질의 데이터가 확보된다면, 이는 곧 **비즈니스 성공을 결정짓는 핵심 자산이 될 수 있습니다.**
 
-이 글에서 다룬 데이터 품질 관리의 중요성, 핵심 개념(데이터 무결성), 5단계 관리 프로세스, 그리고 주요 핵심 활동들을 이해하고 조직 내에 적용함으로써 데이터의 가치를 극대화하시기를 바랍니다. 
-
-데이터 품질 관리는 단기적인 노력으로 완성되지 않습니다. 조직 전체의 지속적인 관심과 노력을 통해 데이터 품질을 향상시키고, 이를 비즈니스 성장의 굳건한 밑거름으로 삼아야 합니다.
+이 글에서 다룬 `데이터 품질 관리의 중요성`, `핵심 개념(데이터 무결성)`, `5단계 관리 프로세스`, `그리고 주요 핵심 활동들`을 이용해 조직 내에 적용함으로써 데이터의 가치를 극대화할 수 있는 기회가 생기면 좋겠습니다.
